objects/Condition_Report__c.object
<CustomObject>
    <description>This represents the present condition of each vehicle, and is used to generate the condition report on the site as well as the printed report handed out at each test drive.</description>
    <fields>
        <fullName>Additional_Info__c</fullName>
        <label>Additional Info</label>
        <length>3000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Additional_Service_Records__c</fullName>
        <description>In addition to those reported to Carfax, how many service records do we have documented?</description>
        <label>Additional Service Records</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Additoinal_Accidents__c</fullName>
        <description>Do we know of any accidents that weren&apos;t reported to carfax? If so, enter the number here.</description>
        <label>Additional Accidents</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This condition report has been reviewed and approved. CHECKING THIS BOX WILL DISPLAY THE REPORT ON CAR PAGES.</description>
        <label>Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Base_Deal_ID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>Base Deal ID</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Brake_Pads__c</fullName>
        <description>Millimeters left on the brake pads.</description>
        <label>Brake Pads</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Brakes_Tired_Definitions_to_Include__c</fullName>
        <label>Brakes &amp; Tired Definitions to Include</label>
        <picklist>
            <picklistValues>
                <fullName>Term 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Term 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Term 3</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Brakes_Tires_Additional_Info__c</fullName>
        <label>Brakes &amp; Tires Additional Info</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Brakes_Tires_Description__c</fullName>
        <label>Brakes &amp; Tires Description</label>
        <picklist>
            <picklistValues>
                <fullName>Good condition</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bad condition</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Poor condition</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Car_ID__c</fullName>
        <description>The admin panel car ID.</description>
        <externalId>true</externalId>
        <label>Car ID</label>
        <length>80</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Engine_Additional_Info__c</fullName>
        <inlineHelpText>Fluids Good: Fluids in good condition and within safe range.
Systems Good: All systems operate properly.
No Leaks Damage: No leaks or damage.
Minor Seepage: Valve cover gasket shows minor seepage.
Worn Belt: Drive belt tensioner worn,</inlineHelpText>
        <label>Engine Additional Info</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Engine_Definitions__c</fullName>
        <label>Engine Definitions to Include</label>
        <picklist>
            <picklistValues>
                <fullName>A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>D</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Engine_Description__c</fullName>
        <label>Engine Description</label>
        <picklist>
            <picklistValues>
                <fullName>Fluids Good</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Systems Good</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Leaks or Damage</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Ready_for_Review__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This condition report is ready for review.</description>
        <label>Ready for Review</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Road_Test_Additional_Info__c</fullName>
        <label>Road Test Additional Info</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Road_Test_Definitions_to_Include__c</fullName>
        <label>Road Test Definitions to Include</label>
        <picklist>
            <picklistValues>
                <fullName>Term 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Term 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Term 3</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Road_Test_Description__c</fullName>
        <label>Road Test Description</label>
        <picklist>
            <picklistValues>
                <fullName>Good</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Poor</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Shift_Repairs__c</fullName>
        <description>Any repairs we&apos;ve made since taking possession of the vehicle.</description>
        <label>Shift Repairs</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Summary__c</fullName>
        <description>A summary to be displayed in the header of the condition report.</description>
        <label>Summary</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Tire_Percentage__c</fullName>
        <description>The projected lifetime percentage left on the tires.</description>
        <label>Tire Percentage</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Underbody_Additional_Info__c</fullName>
        <label>Underbody Additional Info</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Underbody_Definitions_to_Include__c</fullName>
        <label>Underbody Definitions to Include</label>
        <picklist>
            <picklistValues>
                <fullName>Term 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Term 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Term 3</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Underbody_Description__c</fullName>
        <label>Underbody Description</label>
        <picklist>
            <picklistValues>
                <fullName>Good</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Poor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bad</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Wear_and_Tear_Shots__c</fullName>
        <description>Photographer: please ensure that you take photos of each of these cosmetic defects.</description>
        <label>Wear and Tear Shots</label>
        <length>3000</length>
        <type>LongTextArea</type>
    </fields>
    <label>Condition Report</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Condition Report ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Condition Reports</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>